tests/Project2/student_test/test_2_s02.out
Error type 12 at Line 5: indexing by non-integer
Error type 3 at Line 6: redefine variable: num4
Error type 5 at Line 7: unmatching type on both sides of assignment
Error type 6 at Line 9: left side in assignment is rvalue
