tests/Project2/student_test/test_2_s02.spl
int main(){
  int i = 0;
  int num0[1];
  float num3[1];
  float num4 = num3[num3[i]];
  int num4[2][3];
  int ff = num3[num0[0]];
  int num5[2][3];
  3 = num0[0];
  i = num0[num5[0][0]];
  
}